--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,7 @@
     "react-dom": "^19.1.0",
     "react-hot-toast": "^2.6.0",
     "react-icons": "^5.5.0",
+    "react-image-magnify": "^2.7.4",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.7.1",
     "react-svg-credit-card-payment-icons": "^4.0.0",
