--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,7 +28,8 @@
     "react-router-dom": "^7.7.1",
     "react-svg-credit-card-payment-icons": "^4.0.0",
     "react-svg-curve": "^0.2.1",
-    "styled-components": "^6.1.19"
+    "styled-components": "^6.1.19",
+    "uuid": "^13.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
