--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "@mui/icons-material": "^7.2.0",
     "@mui/material": "^7.2.0",
     "@mui/x-charts": "^8.10.1",
+    "@mui/x-data-grid": "^8.21.0",
     "@reduxjs/toolkit": "^2.9.0",
     "axios": "^1.11.0",
     "open": "^10.2.0",
