--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,8 @@
     "@mui/x-data-grid": "^8.21.0",
     "@reduxjs/toolkit": "^2.9.0",
     "axios": "^1.11.0",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^3.0.4",
     "open": "^10.2.0",
     "react": "^19.1.0",
     "react-custom-scrollbars": "^4.2.1",
