--- a/backend/package.json
+++ b/backend/package.json
@@ -24,6 +24,8 @@
     "mongoose": "^8.17.2",
     "multer": "^2.0.2",
     "nodemailer": "^7.0.6",
-    "open": "^10.2.0"
+    "open": "^10.2.0",
+    "passport": "^0.7.0",
+    "passport-google-oauth20": "^2.0.0"
   }
 }
